# cmake_learning

0001_get_filename_component/: CMakeLists.txt  result  test.cc
0002_add_custom_command/: CMakeLists.txt  output.cc  test.cc
0003_add_library/: CMakeLists.txt  main.cc  message.cc  message.h
0004_CMAKE_SYSTEM_NAME/: CMakeLists.txt  result
0005_target_compile_definitions/: CMakeLists.txt  main.cc
0006_CMAKE_CXX_COMPILER_ID/: CMakeLists.txt  result
0007_cmake_host_system_information/: CMakeLists.txt  config.h.in  main.cc
0008_CMAKE_CXX_STANDARD/: CMakeLists.txt  main.cc
0009_find_file/: CMakeLists.txt
